Depends: emi-version added.

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: https://github.com/argus-authz/argus-metapackage
 
 Package: emi-argus
 Architecture: all
-Depends: argus-pap, argus-pdp, argus-pep-server, ${misc:Depends}
+Depends: emi-version, argus-pap, argus-pdp, argus-pep-server, ${misc:Depends}
 Description: Argus metapackage.
  The Argus Authorization Service is composed of three main 
  components:
