--- a/fedora/emi-argus.spec.in
+++ b/fedora/emi-argus.spec.in
@@ -2,7 +2,7 @@ Name: emi-argus
 
 Version: @@SPEC_VERSION@@
 Release: @@SPEC_RELEASE@@%{?dist}
-Summary: Argus metapackage (PAP, PDP and PEP Server)
+Summary: Argus EMI meta-package (PAP, PDP and PEP Server)
 
 Group: System Environment/Daemons
 License: ASL 2.0
@@ -22,7 +22,7 @@ Requires: bdii
 Requires: yaim-argus_server
 
 %description 
-Argus metapackage.
+Argus EMI meta-package (PAP, PDP and PEP Server).
 The Argus Authorization Service is composed of three main 
 components:
 - The Policy Administration Point (PAP) provides the tools to 
